--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.3",
     "karma-phantomjs2-launcher": "^0.3.2",
+    "lodash.get": "^3.7.0",
+    "lodash.partial": "^3.1.1",
     "mocha": "^2.3.4",
     "phantomjs2-ext": "^0.1.0",
     "pre-commit": "^1.1.2",
