--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Christopher Hiller <chiller@decipherinc.com>"
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "keywords": [
     "angular",
     "angularjs",
