revert problematic build config

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build": "npm run build-node; npm run build-browser",
     "build-node": "rimraf lib; babel src --out-dir lib",
     "build-browser": "npm run build-browser-main; npm run build-browser-min",
-    "build-browser-main": "browserify --plugin [ bannerify --file .banner.txt --pkg package.json ] src --outfile angular-loggly-mixin.js",
-    "build-browser-min": "browserify --plugin [ bannerify --file .banner.txt --pkg package.json ] --global-transform uglifyify src --outfile angular-loggly-mixin.min.js"
+    "build-browser-main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.txt --pkg package.json ] src --outfile angular-loggly-mixin.js",
+    "build-browser-min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.txt --pkg package.json ] --global-transform uglifyify src --outfile angular-loggly-mixin.min.js",
+    "prepublish": "npm run build-node"
   },
   "repository": {
     "type": "git",
@@ -79,18 +80,11 @@
   "dependencies": {
     "format": "^0.2.1"
   },
+  "browser": "angular-loggly.js",
   "browserify": {
     "transform": [
       "babelify",
-      "browserify-ngannotate",
-      [
-        "exposify",
-        {
-          "expose": {
-            "angular": "angular"
-          }
-        }
-      ]
+      "browserify-ngannotate"
     ]
   }
 }
