--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
+os:
+  - linux
+sudo: false
 language: node_js
 node_js:
-  - '0.12'
   - '0.10'
+  - '0.12'
   - 'iojs'
   - 4
   - 5
-sudo: false
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+install:
+  - export CXX=g++-4.8
+  - $CXX --version
+  - npm i
