--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-os:
-  - linux
 sudo: false
 language: node_js
 node_js:
@@ -8,15 +6,17 @@ node_js:
   - 'iojs'
   - 4
   - 5
+compiler: clang-3.6
+env:
+  - CXX=clang-3.6
 addons:
   apt:
     sources:
-    - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
+      - ubuntu-toolchain-r-test
     packages:
-    - g++-4.8
-install:
-  - export CXX=g++-4.8
-  - $CXX --version
-  - npm i
+      - clang-3.6
+      - g++-4.8
+
 env:
   - PHANTOMJS_BIN=/home/travis/build/decipherinc/angular-loggly-mixin/node_modules/phantomjs2-ext/lib/phantom/bin/phantomjs
