--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.3",
-    "karma-phantomjs2-launcher": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.2.1",
     "lodash.get": "^3.7.0",
     "lodash.partial": "^3.1.1",
     "mocha": "^2.3.4",
-    "phantomjs2-ext": "^0.1.0",
+    "phantomjs": "^1.9.19",
     "pre-commit": "^1.1.2",
     "publish-please": "^1.1.0",
     "rimraf": "^2.4.4",
