--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "angular-loggly-mixin",
   "version": "0.0.0",
   "description": "AngularJS module to pass $log calls thru to Loggly",
-  "main": "lib/index.js",
+  "main": "dist/angular-loggly-mixin.js",
   "scripts": {
-    "test": "npm run lint && npm run karma",
-    "karma": "karma start .karma.conf.js --single-run",
-    "watch": "karma start .karma.conf.js",
-    "lint": "eslint src/**/*.js .*..js test/**/*.js",
-    "build": "npm run build-node; npm run build-browser",
-    "build-node": "rimraf lib; babel src --out-dir lib",
-    "build-browser": "npm run build-browser-main; npm run build-browser-min",
-    "build-browser-main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.txt --pkg package.json ] src --outfile angular-loggly-mixin.js",
-    "build-browser-min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.txt --pkg package.json ] --global-transform uglifyify src --outfile angular-loggly-mixin.min.js"
+    "build": "npm run build:node && npm run build:browser",
+    "build:browser": "npm run build:browser:clean && npm run build:browser:main && npm run build:browser:min",
+    "build:browser:clean": "rimraf dist && mkdirp dist",
+    "build:browser:main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] src --outfile dist/angular-loggly-mixin.js",
+    "build:browser:min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] --global-transform uglifyify src --outfile dist/angular-loggly-mixin.min.js",
+    "build:node": "babel src --out-dir lib",
+    "build:node:clean": "rimraf lib && mkdirp lib",
+    "check": "nsp check && npm run deps",
+    "deps": "npm run deps:missing && npm run deps:extra",
+    "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev --ignore-module rimraf --ignore-module mkdirp",
+    "deps:missing": "dependency-check package.json --no-default-entries --entry src/index.js --missing",
+    "lint": "eslint src/ test/ .*.js",
+    "prepublish": "npm run build && npm run check && npm run test",
+    "publish-please": "publish-please",
+    "test": "npm run lint && npm run test:browser",
+    "test:browser": "karma start .karma.conf.js --single-run",
+    "test:watch": "karma start .karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -28,7 +36,8 @@
     "mixin"
   ],
   "files": [
-    "lib/**/*.js"
+    "lib/**/*.js",
+    "dist/**/*.js"
   ],
   "author": "Christopher Hiller <chiller@decipherinc.com>",
   "license": "Apache-2.0",
@@ -47,13 +56,14 @@
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "bannerify": "vekat/bannerify#feature-option",
+    "bannerify": "^1.0.1",
     "browserify": "^12.0.1",
     "browserify-istanbul": "^0.2.1",
     "browserify-ngannotate": "^2.0.0",
     "chai": "^3.4.1",
     "codeclimate-test-reporter": "^0.1.1",
     "coveralls": "^2.11.6",
+    "dependency-check": "^2.5.1",
     "eslint": "^1.10.3",
     "eslint-config-semistandard": "^5.0.0",
     "eslint-config-standard": "^4.4.0",
@@ -69,17 +79,19 @@
     "lodash.get": "^3.7.0",
     "lodash.partial": "^3.1.1",
     "mocha": "^2.3.4",
+    "nsp": "^2.2.0",
     "phantomjs": "^1.9.19",
     "pre-commit": "^1.1.2",
     "publish-please": "^1.1.0",
-    "rimraf": "^2.5.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "uglifyify": "^3.0.1",
     "wallabify": "0.0.12"
   },
   "dependencies": {
-    "format": "^0.2.1"
+    "format": "^0.2.1",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.5.0"
   },
   "browser": "angular-loggly.js",
   "browserify": {
