--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "homepage": "https://github.com/decipherinc/angular-loggly-mixin#readme",
   "peerDependencies": {
-    "angular": "*"
+    "angular": "^1.2.0"
   },
   "devDependencies": {
     "angular": "^1.4.8",
