--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deps": "npm run deps:missing && npm run deps:extra",
     "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev --ignore-module rimraf --ignore-module mkdirp",
     "deps:missing": "dependency-check package.json --no-default-entries --entry src/index.js --missing",
+    "deps:update": "updtr",
     "lint": "eslint src/ test/ .*.js",
     "prepublish": "npm run build && npm run preversion",
     "preversion": "npm run check && npm run test",
@@ -58,7 +59,7 @@
     "angular": "^1.4.8",
     "angular-mocks": "^1.4.8",
     "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.17",
+    "babel-core": "^6.3.26",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
@@ -81,7 +82,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
+    "karma-mocha-reporter": "^1.1.4",
     "karma-phantomjs-launcher": "^0.2.2",
     "lodash.get": "^3.7.0",
     "lodash.partial": "^3.1.1",
@@ -93,6 +94,7 @@
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "uglifyify": "^3.0.1",
+    "updtr": "^0.1.6",
     "wallabify": "0.0.12"
   },
   "dependencies": {
