fix bump scripts

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:browser": "rimraf dist && mkdirp dist && npm run build:browser:main && npm run build:browser:min",
     "build:browser:main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] src --outfile dist/angular-loggly-mixin.js",
     "build:browser:min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] --global-transform uglifyify src --outfile dist/angular-loggly-mixin.min.js",
-    "bump:major": "npm version major 'Release v%s'",
-    "bump:minor": "npm version minor 'Release v%s'",
-    "bump:patch": "npm version patch 'Release v%s'",
+    "bump:major": "npm version major -m 'Release v%s'",
+    "bump:minor": "npm version minor -m 'Release v%s'",
+    "bump:patch": "npm version patch -m 'Release v%s'",
     "check": "nsp check && npm run deps",
     "deps": "npm run deps:missing && npm run deps:extra",
     "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev --ignore-module rimraf --ignore-module mkdirp",
