--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deps:missing": "dependency-check package.json --no-default-entries --entry src/index.js --missing",
     "deps:update": "updtr",
     "lint": "eslint src/ test/ .*.js",
-    "prepublish": "npm run build:node && npm run preversion",
+    "prepublish": "npm run build",
     "preversion": "npm run check && npm run test",
     "publish-please": "publish-please",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
