--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bump:patch": "npm version patch -m \"Release v%s\"",
     "check": "nsp check && npm run deps",
     "deps": "npm run deps:missing && npm run deps:extra",
-    "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev --ignore-module rimraf --ignore-module mkdirp",
+    "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev",
     "deps:missing": "dependency-check package.json --no-default-entries --entry src/index.js --missing",
     "deps:update": "updtr",
     "lint": "eslint src/ test/ .*.js",
@@ -86,11 +86,13 @@
     "karma-phantomjs-launcher": "^0.2.2",
     "lodash.get": "^3.7.0",
     "lodash.partial": "^3.1.1",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.3.4",
     "nsp": "^2.2.0",
     "phantomjs": "^1.9.19",
     "pre-commit": "^1.1.2",
     "publish-please": "^1.1.0",
+    "rimraf": "^2.5.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "uglifyify": "^3.0.1",
@@ -99,9 +101,7 @@
   },
   "dependencies": {
     "format": "^0.2.1",
-    "lodash.iserror": "^3.0.1",
-    "mkdirp": "^0.5.1",
-    "rimraf": "^2.5.0"
+    "lodash.iserror": "^3.0.1"
   },
   "browser": "dist/angular-loggly-mixin.js",
   "browserify": {
