--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "description": "AngularJS module to pass $log calls thru to Loggly",
   "main": "lib/index.js",
   "scripts": {
-    "build": "npm run build:node && npm run build:browser",
+    "build": "parallel build:node build:browser",
     "build:node": "rimraf lib && babel src --out-dir lib",
-    "build:browser": "rimraf dist && mkdirp dist && npm run build:browser:main && npm run build:browser:min",
+    "build:browser": "rimraf dist && mkdirp dist && parallel build:browser:main build:browser:min",
     "build:browser:main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] src --outfile dist/angular-loggly-mixin.js",
     "build:browser:min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] --global-transform uglifyify src --outfile dist/angular-loggly-mixin.min.js",
     "bump:major": "npm version major -m \"Release v%s\"",
     "bump:minor": "npm version minor -m \"Release v%s\"",
     "bump:patch": "npm version patch -m \"Release v%s\"",
-    "check": "nsp check && npm run deps",
-    "deps": "npm run deps:missing && npm run deps:extra",
+    "check": "parallel nsp deps",
+    "deps": "parallel deps:missing deps:extra",
     "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev",
     "deps:missing": "dependency-check package.json --no-default-entries --entry src/index.js --missing",
     "deps:update": "updtr",
     "lint": "eslint src/ test/ .*.js",
+    "nsp": "nsp check",
     "prepublish": "npm run build",
-    "preversion": "npm run check && npm run test",
+    "preversion": "npm run test",
     "publish-please": "publish-please",
-    "test": "npm run lint && npm run test:unit && npm run test:e2e",
+    "test": "parallel check lint test:unit test:e2e",
     "test:unit": "karma start .karma.unit.conf.js --single-run",
     "test:e2e": "npm run build:browser && karma start .karma.e2e.conf.js --single-run"
   },
@@ -89,6 +90,7 @@
     "lodash.partial": "^3.1.1",
     "mkdirp": "^0.5.1",
     "mocha": "^2.3.4",
+    "npm-parallel": "boneskull/npm-parallel#boneskull-patch-1",
     "nsp": "^2.2.0",
     "phantomjs": "^1.9.19",
     "pre-commit": "^1.1.2",
