--- a/package.json
+++ b/package.json
@@ -58,19 +58,18 @@
     "angular": "^1.2.0"
   },
   "devDependencies": {
-    "angular": "^1.4.8",
-    "angular-mocks": "^1.4.8",
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.6",
+    "angular": "^1.4.9",
+    "angular-mocks": "^1.4.9",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "bannerify": "^1.0.1",
     "browserify": "^13.0.0",
     "browserify-istanbul": "^0.2.1",
     "browserify-ngannotate": "^2.0.0",
-    "chai": "^3.4.1",
-    "codeclimate-test-reporter": "^0.3.1",
+    "chai": "^3.5.0",
     "coveralls": "^2.11.6",
     "dependency-check": "^2.5.1",
     "eslint": "^1.10.3",
@@ -85,26 +84,27 @@
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.5",
-    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-phantomjs-launcher": "^1.0.0",
     "lodash.get": "^4.0.2",
-    "lodash.partial": "^3.1.1",
+    "lodash.partial": "^4.0.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.3.4",
+    "mocha": "^2.4.5",
     "npm-parallel": "boneskull/npm-parallel#boneskull-patch-1",
     "nsp": "^2.2.0",
-    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.3",
     "pre-commit": "^1.1.2",
     "publish-please": "^1.1.0",
-    "rimraf": "^2.5.0",
-    "sinon": "^1.17.2",
+    "rimraf": "^2.5.1",
+    "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "uglifyify": "^3.0.1",
     "updtr": "^0.1.7",
-    "wallabify": "0.0.13"
+    "wallabify": "0.0.13",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
-    "format": "^0.2.1",
-    "lodash.iserror": "^3.0.1"
+    "format": "^0.2.2",
+    "lodash.iserror": "^3.0.3"
   },
   "browser": "dist/angular-loggly-mixin.js",
   "browserify": {
