--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:browser": "rimraf dist && mkdirp dist && parallel build:browser:main build:browser:min",
     "build:browser:main": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] src --outfile dist/angular-loggly-mixin.js",
     "build:browser:min": "browserify --transform [ exposify --expose [ --angular angular ] ] --plugin [ bannerify --file .banner.ejs --pkg package.json ] --global-transform uglifyify src --outfile dist/angular-loggly-mixin.min.js",
-    "bump:major": "npm version major -m \"Release v%s\"",
-    "bump:minor": "npm version minor -m \"Release v%s\"",
-    "bump:patch": "npm version patch -m \"Release v%s\"",
+    "bump:major": "npm version major -m 'Release v%s'",
+    "bump:minor": "npm version minor -m 'Release v%s'",
+    "bump:patch": "npm version patch -m 'Release v%s'",
     "check": "parallel nsp deps",
     "deps": "parallel deps:missing deps:extra",
     "deps:extra": "dependency-check package.json --no-default-entries --entry src/index.js --extra --no-dev",
