--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "babel-eslint": "^4.1.8",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
-    "bannerify": "^1.0.1",
+    "bannerify": "github:vekat/bannerify",
     "browserify": "^13.0.0",
     "browserify-istanbul": "^0.2.1",
     "browserify-ngannotate": "^2.0.0",
